<resources>
    <string name="app_name">Meditation Timer</string>
    <string name="duration_label">Duration (minutes)</string>
    <string name="interval_label">Interval (minutes, 0 for none)</string>
    <string name="entrainment_audio">Entrainment audio</string>
    <string name="select_entrainment_audio">Select Entrainment Audio</string>
    <string name="entrainment_none">No entrainment audio selected</string>
    <string name="clear_entrainment_audio">Clear Entrainment Audio</string>
    <string name="entrainment_volume">Entrainment volume</string>
    <string name="entrainment_mute">Mute entrainment</string>
    <string name="select_music">Select Background Music</string>
    <string name="music_none">No music selected</string>
    <string name="clear_music">Clear Background Music</string>
    <string name="music_volume">Music volume</string>
    <string name="music_mute">Mute music</string>
    <string name="chime_none">No chime selected</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="stop">Stop</string>
    <string name="save_preset">Save</string>
    <string name="load_preset">Load</string>
    <string name="delete_preset">Delete</string>
    <string name="save_default">Default</string>
    <string name="set_as_default">Set as Default</string>
    <string name="presets">Presets</string>
    <string name="background_music">Background music</string>
    <string name="timer_running">Timer running</string>
    <string name="start_chime">Start chime</string>
    <string name="interval_chime">Interval chime</string>
    <string name="end_chime">End chime</string>
    <string name="select_start_chime">Select Start Chime</string>
    <string name="select_interval_chime">Select Interval Chime</string>
    <string name="select_end_chime">Select End Chime</string>
    <string name="settings">Settings</string>
    <string name="keep_screen_awake">Keep screen awake while timer runs</string>
    <string name="keep_screen_awake_hint">Prevents the screen from dimming or locking while the meditation timer is running.</string>
    <string name="tab_timer">Timer</string>
    <string name="tab_exercise_timer">Exercise Timer</string>
    <string name="use_square_breathing_gif">Use square breathing GIF</string>
    <string name="square_breathing_visual">Square breathing guide animation</string>

    <!-- Exercise Timer -->
    <string name="add_new_routine">Add New Routine</string>
    <string name="no_routines">No routines yet. Tap \'Add New Routine\' to create one.</string>
    <string name="routine_name_hint">Routine name</string>
    <string name="bell_sound_label">Bell sound</string>
    <string name="select_bell_sound">Select Bell Sound</string>
    <string name="clear_bell_sound">Clear Bell Sound</string>
    <string name="add_interval">Add Interval</string>
    <string name="save_routine">Save Routine</string>
    <string name="new_routine_title">New Routine</string>
    <string name="edit_routine_title">Edit Routine</string>
    <string name="interval_name_hint">Interval name (e.g. Wall Sit)</string>
    <string name="minutes_hint">Minutes</string>
    <string name="seconds_hint">Seconds</string>
    <string name="add_interval_title">Add Interval</string>
    <string name="edit_interval_title">Edit Interval</string>
    <string name="no_intervals_yet">No intervals added yet.</string>
    <string name="intervals_label">Intervals</string>
    <string name="exercise_session_title">Exercise Session</string>
    <string name="next_label">Next:</string>
    <string name="paused_label">PAUSED</string>
    <string name="skip">Skip</string>
</resources>
